[project]
name = "diet"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv>=1.0.1",
    "python-telegram-bot[job-queue]>=21.6",
]

[tool.uv]
dev-dependencies = [
    "aider-chat>=0.59.1",
    "ruff>=0.7.0",
]
